--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
   <section id="services">
     <h2>Our Services</h2>
     <ul>
-      <li>Exterior Wash & Wax</li>
-      <li>Interior Detailing</li>
-      <li>Paint Correction</li>
-      <li>Ceramic Coating</li>
-      <li>Engine Bay Cleaning</li>
-    </ul>
+  <li>Exterior Wash</li>
+  <li>Wax</li>
+  <li>Sealant</li>
+  <li>Interior Detailing</li>
+  <li>Engine Bay Cleaning</li>
+</ul>
   </section>
 
   <section id="pricing">
@@ -85,54 +85,37 @@
       <button class="btn" data-package="both">Both</button>
     </div>
     <div id="interior" class="package active">
-      <h3>Interior Packages</h3>
-      <ul>
-        <li><strong>Basic:</strong> $125 – Vacuum, wipe down, interior glass</li>
-        <li><strong>Complete:</strong> $175 – Includes basic + shampoo + jam clean</li>
-        <li><strong>Premium:</strong> $225 – Everything + steam clean + leather care</li>
-        <li>Add-ons: Pet hair removal, console detail, stain removal, etc.</li>
-      </ul>
-    </div>
+  <h3>Interior Packages</h3>
+  <ul>
+    <li><strong>Basic – $125</strong><br />Full vacuum, interior glass, all surfaces wiped down</li><br />
+    <li><strong>Complete – $175</strong><br />Everything in Basic + shampoo carpets + door jamb cleaning + light gunk removal</li><br />
+    <li><strong>Premium – $225</strong><br />Everything in Complete + steam cleaning + leather conditioning + console/glovebox</li><br />
+    <li><strong>Add-ons:</strong><br />Door jam cleaning ($25), Light gunk removal ($15), Carpet shampoo ($25), Console/glovebox cleaning ($10), Steam cleaning ($50), Leather Conditioning ($25), Pet hair or excessive stain removal (extra)</li>
+  </ul>
+</div>
     <div id="exterior" class="package">
-      <h3>Exterior Packages</h3>
-      <ul>
-        <li><strong>Basic:</strong> $50 – Wash, foam bath, wheels, dry</li>
-        <li>Add-ons: Wax ($75), Sealant ($50), Engine Bay ($75)</li>
-      </ul>
-    </div>
+  <h3>Exterior Packages</h3>
+  <ul>
+    <li><strong>Basic – $50</strong><br />Pre-wash, bug & tar removal, snow foam, wheel & tire clean, tire shine, light door jamb cleaning, exterior windows</li><br />
+    <li><strong>Add-ons:</strong><br />Hand waxed ($75), Sealant ($50), Engine bay cleaning ($75)</li>
+  </ul>
+</div>
     <div id="both" class="package">
-      <h3>Interior + Exterior Packages</h3>
-      <ul>
-        <li><strong>Basic:</strong> $150</li>
-        <li><strong>Complete:</strong> $200</li>
-        <li><strong>Premium:</strong> $250</li>
-      </ul>
-    </div>
+  <h3>Interior + Exterior Packages</h3>
+  <ul>
+    <li><strong>Basic – $150</strong><br />Basic exterior + interior cleaning (vacuum, wipe down, windows, pre-wash, foam, tire/wheel clean)</li><br />
+    <li><strong>Complete – $200</strong><br />Complete interior and exterior including shampoo, UV treatment, door jams, bug removal, hand wax</li><br />
+    <li><strong>Premium – $250</strong><br />Full detail inside and out with steam clean, leather care, engine bay, sealant, full protection and shine</li><br />
+    <li><strong>Add-ons:</strong><br />All interior and exterior add-ons available. Ask for custom bundle!</li>
+  </ul>
+</div>
   </section>
 
   <section id="booking">
-    <h2>Book a Detail</h2>
-    <form id="bookingForm">
-      <input type="text" name="name" placeholder="Full Name" required />
-      <input type="email" name="email" placeholder="Email" required />
-      <input type="text" name="vehicle" placeholder="Vehicle" required />
-      <select name="service">
-        <option value="Interior">Interior</option>
-        <option value="Exterior">Exterior</option>
-        <option value="Both">Both</option>
-      </select>
-      <select name="tier">
-        <option value="Basic">Basic</option>
-        <option value="Complete">Complete</option>
-        <option value="Premium">Premium</option>
-      </select>
-      <input type="date" name="date" required />
-      <input type="time" name="time" required />
-      <textarea name="notes" placeholder="Any notes or questions?"></textarea>
-      <button type="submit" class="btn">Submit Booking</button>
-    </form>
-    <p id="statusMessage"></p>
-  </section>
+  <h2>Book a Detail</h2>
+  <p>Use our calendar to request your detail service below:</p>
+  <a class="btn" href="https://calendar.app.google/uZgi6PUgkouNa9r77" target="_blank">Schedule Appointment</a>
+</section>
 
   <section id="contact">
     <h2>Contact Us</h2>
@@ -145,6 +128,12 @@
     <h2>Follow Us</h2>
     <a href="https://www.instagram.com/az.elite.car.detailing" target="_blank">Instagram</a>
   </section>
+
+  <footer>
+    <p>&copy; 2025 Elite Car Detailing. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
   <footer>
     <p>&copy; 2025 Elite Car Detailing. All rights reserved.</p>
