--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <header class="header">
-    <img src="images/logo.png" alt="Elite Car Detailing Logo" class="logo" onerror="this.src='https://via.placeholder.com/150x80?text=Logo+Missing'" />
+    <img src="logo.png" alt="Elite Car Detailing Logo" class="logo" onerror="this.src='https://via.placeholder.com/150x80?text=Logo+Missing'" />
     <nav>
       <ul>
         <li><a href="#services">Services</a></li>
@@ -60,7 +60,7 @@
   </header>
 
   <section class="hero">
-    <img id="carImage" src="images/clean-car.png" alt="Clean Car" class="slide-in" onerror="this.src='https://via.placeholder.com/800x400?text=Car+Image+Missing'" />
+    <img id="carImage" src="clean-car.png" alt="Clean Car" class="slide-in" onerror="this.src='https://via.placeholder.com/800x400?text=Car+Image+Missing'" />
     <h1 id="siteTitle">Elite Car Detailing</h1>
     <p>Mobile detailing in Snowflake, AZ and surrounding areas.</p>
     <a href="#booking" class="btn">Book Now</a>
@@ -134,3 +134,4 @@
   </footer>
 </body>
 </html>
+
