--- a/index.html
+++ b/index.html
@@ -78,38 +78,60 @@
   </section>
 
   <section id="pricing">
-    <h2>Pricing Packages</h2>
-    <div class="package-tabs">
-      <button class="btn" data-package="interior">Interior</button>
-      <button class="btn" data-package="exterior">Exterior</button>
-      <button class="btn" data-package="both">Both</button>
-    </div>
-    <div id="interior" class="package active">
-  <h3>Interior Packages</h3>
-  <ul>
-    <li><strong>Basic – $125</strong><br />Full vacuum, interior glass, all surfaces wiped down</li><br />
-    <li><strong>Complete – $175</strong><br />Everything in Basic + shampoo carpets + door jamb cleaning + light gunk removal</li><br />
-    <li><strong>Premium – $225</strong><br />Everything in Complete + steam cleaning + leather conditioning + console/glovebox</li><br />
-    <li><strong>Add-ons:</strong><br />Door jam cleaning ($25), Light gunk removal ($15), Carpet shampoo ($25), Console/glovebox cleaning ($10), Steam cleaning ($50), Leather Conditioning ($25), Pet hair or excessive stain removal (extra)</li>
-  </ul>
-</div>
-    <div id="exterior" class="package">
-  <h3>Exterior Packages</h3>
-  <ul>
-    <li><strong>Basic – $50</strong><br />Pre-wash, bug & tar removal, snow foam, wheel & tire clean, tire shine, light door jamb cleaning, exterior windows</li><br />
-    <li><strong>Add-ons:</strong><br />Hand waxed ($75), Sealant ($50), Engine bay cleaning ($75)</li>
-  </ul>
-</div>
-    <div id="both" class="package">
-  <h3>Interior + Exterior Packages</h3>
-  <ul>
-    <li><strong>Basic – $150</strong><br />Basic exterior + interior cleaning (vacuum, wipe down, windows, pre-wash, foam, tire/wheel clean)</li><br />
-    <li><strong>Complete – $200</strong><br />Complete interior and exterior including shampoo, UV treatment, door jams, bug removal, hand wax</li><br />
-    <li><strong>Premium – $250</strong><br />Full detail inside and out with steam clean, leather care, engine bay, sealant, full protection and shine</li><br />
-    <li><strong>Add-ons:</strong><br />All interior and exterior add-ons available. Ask for custom bundle!</li>
-  </ul>
-</div>
-  </section>
+  <h2>Pricing Packages</h2>
+  <div class="package-tabs">
+    <button class="btn" data-package="interior">Interior</button>
+    <button class="btn" data-package="exterior">Exterior</button>
+    <button class="btn" data-package="both">Both</button>
+    <button class="btn" data-package="rv">RV Detailing</button>
+    <button class="btn" data-package="subscription">Monthly Subscription</button>
+  </div>
+
+  <div id="interior" class="package active">
+    <h3>Interior Packages</h3>
+    <ul>
+      <li><strong>Basic – $150</strong><br />Full vacuum, interior glass, all surfaces wiped down</li><br />
+      <li><strong>Complete – $200</strong><br />Everything in Basic + shampoo carpets + door jamb cleaning + light gunk removal</li><br />
+      <li><strong>Premium – $250</strong><br />Everything in Complete + steam cleaning + leather conditioning + console/glovebox</li><br />
+      <li><strong>Add-ons:</strong><br />Door jam cleaning ($25), Light gunk removal ($15), Carpet shampoo ($25), Console/glovebox cleaning ($10), Steam cleaning ($50), Leather Conditioning ($25), Third Row Seat ($40), Pet hair removal ($50), Stain removal ($25)</li>
+    </ul>
+  </div>
+
+  <div id="exterior" class="package">
+    <h3>Exterior Packages</h3>
+    <ul>
+      <li><strong>Exterior Detail – $75</strong><br />Pre-wash, bug & tar removal, snow foam, wheel & tire clean, tire shine, light door jamb cleaning, exterior windows</li><br />
+      <li><strong>Add-ons:</strong><br />Hand waxed ($75), Sealant ($50), Engine bay cleaning ($75)</li>
+    </ul>
+  </div>
+
+  <div id="both" class="package">
+    <h3>Interior + Exterior Packages</h3>
+    <ul>
+      <li><strong>Basic – $200</strong><br />Basic exterior + interior cleaning (vacuum, wipe down, windows, pre-wash, foam, tire/wheel clean)</li><br />
+      <li><strong>Complete – $250</strong><br />Complete interior and exterior including shampoo, UV treatment, door jams, bug removal, hand wax</li><br />
+      <li><strong>Premium – $300</strong><br />Full detail inside and out with steam clean, leather care, engine bay, sealant, full protection and shine</li><br />
+      <li><strong>Add-ons:</strong><br />All interior and exterior add-ons available. Ask for custom bundle!</li>
+    </ul>
+  </div>
+
+  <div id="rv" class="package">
+    <h3>RV Detailing</h3>
+    <ul>
+      <li><strong>Exterior – $375</strong><br />Full exterior wash, bug & tar removal, wheels & tires, tire shine, snow foam, sealant finish</li><br />
+      <li><strong>Interior – $275</strong><br />Full vacuum (including cracks and crevices), interior window cleaning, all hard surfaces scrubbed and cleaned, seat cleaning (leather/upholstery), leather conditioning, all appliances cleaned</li>
+    </ul>
+  </div>
+
+  <div id="subscription" class="package">
+    <h3>Monthly Detailing Subscription</h3>
+    <ul>
+      <li><strong>Full Detail – $125</strong><br />Basic Interior + Exterior Detail every month</li><br />
+      <li><strong>Interior Detail – $100</strong><br />Basic interior services on a monthly basis</li><br />
+      <li><strong>Exterior Detail – $45</strong><br />Exterior services performed monthly</li>
+    </ul>
+  </div>
+</section>
 
   <section id="booking">
   <h2>Book a Detail</h2>
@@ -134,4 +156,3 @@
   </footer>
 </body>
 </html>
-
