--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <h3>Exterior Packages</h3>
     <ul>
       <li><strong>Exterior Detail – $75</strong><br />Pre-wash, bug & tar removal, snow foam, wheel & tire clean, tire shine, light door jamb cleaning, exterior windows</li><br />
-      <li><strong>Add-ons:</strong><br />Hand waxed ($75), Sealant ($50), Engine bay cleaning ($75)</li>
+      <li><strong>Add-ons:</strong><br />Hand waxed ($75), Sealant ($50), Engine bay cleaning ($75), Headlight restoration ($100)</li>
     </ul>
   </div>
 
@@ -156,3 +156,4 @@
   </footer>
 </body>
 </html>
+
