--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
   </section>
 
   <section id="services">
-    <h2>Our Services</h2>
-    <ul>
+  <h2>Our Services</h2>
+  <ul>
+    <li>Headlight Restoration</li>
   <li>Exterior Wash</li>
   <li>Wax</li>
   <li>Sealant</li>
@@ -150,6 +151,12 @@
     <h2>Follow Us</h2>
     <a href="https://www.instagram.com/az.elite.car.detailing" target="_blank">Instagram</a>
   </section>
+
+  <footer>
+    <p>&copy; 2025 Elite Car Detailing. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
   <footer>
     <p>&copy; 2025 Elite Car Detailing. All rights reserved.</p>
