--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="#social">Social Media</a></li>
-        <li><a href="#booking">Book Now</a></li>
+        
       </ul>
     </nav>
   </header>
@@ -63,7 +63,7 @@
     <img id="carImage" src="clean-car.png" alt="Clean Car" class="slide-in" onerror="this.src='https://via.placeholder.com/800x400?text=Car+Image+Missing'" />
     <h1 id="siteTitle">Elite Car Detailing</h1>
     <p>Mobile detailing in Snowflake, AZ and surrounding areas.</p>
-    <a href="#booking" class="btn">Book Now</a>
+    <a href="https://calendar.app.google/uZgi6PUgkouNa9r77" class="btn" target="_blank">Book Now</a>
   </section>
 
   <section id="services">
